-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.12
-
Component/s: None
-
Labels:
-
Module:
-
Guilty Commit:0.4.12-dev-558-g64987cf
RawTherapee 4.2.1 used to work with a slow, but acceptable performance on ROS 0.4.11 RC25. In comparison, on ROS 0.4.12-RC-17-g3e71805 it is subjectively by factor 5 slower, making it more or less unusable. Examples:
- When resizing the window the application takes very long to react and redraw.
- When navigating directories with images the application is very slow to update and to show the contained images.
There are no error messages or such.
In both cases Raw Therapee was installed on a vanilla ROS on VirtualBox 5.1.34 with just the VBox Additions and Tahoma Font installed. Identical settings were used for VBox.
I consider this a regression but have not yet looked for a guilty revision yet. Neither have I tested versions older than ROS 0.4.11 for this.
- relates to
-
CORE-15623 Regression, font rendering regressed in Wireshark 1.12
-
- Resolved
-
-
CORE-16133 Regression, Precise Calculator 2.6 when typing characters into the edit field only a single row of Pixels is drawn
-
- Resolved
-